# TCP

./: README.md  pyproject.toml
tcp_core/: adjacency.py  dashboard.py  edge_trainer.py  embedding_map.py  energy_model.py  local_embedder.py  map_project.py  orchestrator.py  topology_prompt.py  walk_matrix.py
templates/: c_telemetry.c  c_telemetry.h
